// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader component when loading has errored renders error text and an unanimated OutsidersMark 1`] = `
<div
  className="app-loader"
>
  <h2
    className="app-loader__message"
  >
    Error while loading
  </h2>
  <MockOutsidersMark
    animated={false}
    className="app-loader__icon"
  />
</div>
`;

exports[`Loader component when loading is complete renders children 1`] = `
<p>
  Hello world.
</p>
`;

exports[`Loader component when loading is incomplete renders loading text and an animated OutsidersMark 1`] = `
<div
  className="app-loader"
>
  <h2
    className="app-loader__message"
  >
    Loading
  </h2>
  <MockOutsidersMark
    animated={true}
    className="app-loader__icon"
  />
</div>
`;
